Fixing paragraph spacing on About Me section

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -359,6 +359,8 @@ fieldset{
 p{
     display: block;
     text-indent: 50px;
+    margin: auto;
+    
 }
 
 .julie {
